--- a/index.html
+++ b/index.html
@@ -11,6 +11,18 @@
       href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"
       rel="stylesheet"
     />
+
+    <!-- ****** font awesome cdn ******* -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+    />
+
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/boxicons@latest/css/boxicons.min.css"
+    />
+
     <title>Portfolio</title>
   </head>
   <body>
@@ -98,8 +110,74 @@
     <!-- ******* services section ends ******** -->
 
     <!-- ******* skills section starts ******** -->
-    <section class="skills" id="skills"></section>
+    <section class="skills" id="skills">
+      <div class="title">Skills</div>
+      <div class="skills__contain">
+        <div class="box">
+          <i class="bx bxl-html5"></i>
+          <div class="skill__title">HTML5</div>
+        </div>
+        <div class="box">
+          <i class="bx bxl-css3"></i>
+          <div class="skill__title">CSS3</div>
+        </div>
+        <div class="box">
+          <i class="bx bxl-bootstrap"></i>
+          <div class="skill__title">Bootstrap</div>
+        </div>
+        <div class="box">
+          <i class="bx bxl-javascript"></i>
+          <div class="skill__title">Javascript</div>
+        </div>
+        <div class="box">
+          <i class="bx bxl-react"></i>
+          <div class="skill__title">ReactJs</div>
+        </div>
+        <div class="box">
+          <i class="bx bxl-nodejs"></i>
+          <div class="skill__title">NodeJs</div>
+        </div>
+        <div class="box">
+          <i class="bx bxl-mongodb"></i>
+          <div class="skill__title">mongodb</div>
+        </div>
+        <div class="box">
+          <i class="bx bxl-postgresql"></i>
+          <div class="skill__title">postgresql</div>
+        </div>
+        <div class="box">
+          <i class="fa-solid fa-database"></i>
+          <div class="skill__title">SQL</div>
+        </div>
+        <div class="box">
+          <i class="fa-solid fa-network-wired"></i>
+          <div class="skill__title">API</div>
+        </div>
+      </div>
+    </section>
     <!-- ******* skills section ends ******** -->
+
+    <!-- ******* about section starts ******** -->
+    <section class="about" id="about">
+      <div class="title">About Me</div>
+      <div class="about__contain">
+        <div class="img__box">
+          <img src="assets/shainy1.png" alt="profile" />
+        </div>
+        <div class="about__content">
+          <div class="about__title">front end Developer</div>
+          <p class="about__desc">
+            I am a dedicated and creative Front-End Developer with a knack for
+            building engaging, efficient, and accessible websites. With hands-on
+            experience in HTML, CSS, JavaScript, React, and more, I continuously
+            strive to improve my skills and deliver high-quality digital
+            solutions that make a real impact.
+          </p>
+          <a href="#contact" id="btn__contact">Contact Me</a>
+        </div>
+      </div>
+    </section>
+    <!-- ******* about section ends ******** -->
 
     <!-- typed text -->
     <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
