--- a/index.html
+++ b/index.html
@@ -179,6 +179,50 @@
     </section>
     <!-- ******* about section ends ******** -->
 
+    <!-- ******* qualification section starts ******** -->
+    <section class="qualifications" id="qualifications">
+      <div class="title">qualification</div>
+      <div class="qualification__contain">
+        <div class="line"></div>
+        <div class="qualification__card box_right">
+          <div class="dot"></div>
+          <div class="qualification__content">
+            <h4>Diploma in Full Stack Development</h4>
+            <p><strong>2023 : </strong>Suhradam IT Hub</p>
+          </div>
+        </div>
+        <div class="qualification__card box_left">
+          <div class="dot"></div>
+          <div class="qualification__content">
+            <h4>MBA in IT</h4>
+            <p><strong>2014 : </strong>Sikkim Manipal University</p>
+          </div>
+        </div>
+        <div class="qualification__card box_right">
+          <div class="dot"></div>
+          <div class="qualification__content">
+            <h4>B.Sc.</h4>
+            <p><strong>2010 : </strong>University of Mumbai</p>
+          </div>
+        </div>
+        <div class="qualification__card box_left">
+          <div class="dot"></div>
+          <div class="qualification__content">
+            <h4>HSC</h4>
+            <p><strong>2007 : </strong>Maharashtra State Board</p>
+          </div>
+        </div>
+        <div class="qualification__card box_right">
+          <div class="dot"></div>
+          <div class="qualification__content">
+            <h4>SSC</h4>
+            <p><strong>2005 : </strong>Maharashtra State Board</p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- ******* qualification section ends ******** -->
+
     <!-- typed text -->
     <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
 
