--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <i class="ri-menu-3-line"></i>
       </div>
       <div class="navlinks">
-        <a href="#home" class="active">home</a>
+        <a class="active" href="#home">home</a>
         <a href="#services">services</a>
         <a href="#skills">skills</a>
         <a href="#about">about</a>
@@ -98,7 +98,7 @@
         </div>
         <div class="service__box">
           <i class="ri-mini-program-line"></i>
-          <div class="service__title">Backend Development</div>
+          <div class="service__title">Full Stack Development</div>
           <div class="service__para">
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Modi
             distinctio iste omnis in ad labore temporibus animi voluptatibus
@@ -188,40 +188,105 @@
           <div class="dot"></div>
           <div class="qualification__content">
             <h4>Diploma in Full Stack Development</h4>
-            <p><strong>2023 : </strong>Suhradam IT Hub</p>
+            <p><strong>2023</strong> : Suhradam IT Hub</p>
           </div>
         </div>
         <div class="qualification__card box_left">
           <div class="dot"></div>
           <div class="qualification__content">
             <h4>MBA in IT</h4>
-            <p><strong>2014 : </strong>Sikkim Manipal University</p>
+            <p><strong>2014</strong> : Sikkim Manipal University</p>
           </div>
         </div>
         <div class="qualification__card box_right">
           <div class="dot"></div>
           <div class="qualification__content">
             <h4>B.Sc.</h4>
-            <p><strong>2010 : </strong>University of Mumbai</p>
+            <p><strong>2010</strong> : University of Mumbai</p>
           </div>
         </div>
         <div class="qualification__card box_left">
           <div class="dot"></div>
           <div class="qualification__content">
             <h4>HSC</h4>
-            <p><strong>2007 : </strong>Maharashtra State Board</p>
+            <p><strong>2007</strong> : Maharashtra State Board</p>
           </div>
         </div>
         <div class="qualification__card box_right">
           <div class="dot"></div>
           <div class="qualification__content">
             <h4>SSC</h4>
-            <p><strong>2005 : </strong>Maharashtra State Board</p>
+            <p><strong>2005</strong> : Maharashtra State Board</p>
           </div>
         </div>
       </div>
     </section>
     <!-- ******* qualification section ends ******** -->
+
+    <!-- ******* projects section starts ******** -->
+    <section class="projects" id="projects">
+      <div class="title">Projects</div>
+      <div class="project__image">
+        <div class="project__card">
+          <img src="assets/project1.jpg" alt="project1" />
+          <div class="project__card__content">
+            <a
+              href="https://www.puravankara.com/campaigns/r/codnamepluslife/"
+              target="_blank"
+            >
+              <i class="ri-links-line"></i>
+              <span class="project__title">puravankara</span>
+            </a>
+          </div>
+        </div>
+        <div class="project__card">
+          <img src="assets/project2.jpg" alt="project1" />
+          <div class="project__card__content">
+            <a href="https://www.soahanserenity.in/" target="_blank">
+              <i class="ri-links-line"></i>
+              <span class="project__title">soahanserenity</span>
+            </a>
+          </div>
+        </div>
+        <div class="project__card">
+          <img src="assets/project3.jpg" alt="project1" />
+          <div class="project__card__content">
+            <a href="https://raymondrealtyaddressbygs.com/" target="_blank">
+              <i class="ri-links-line"></i>
+              <span class="project__title">raymondrealty</span>
+            </a>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- ******* projects section ends ******** -->
+
+    <!-- ******* contact section starts ******** -->
+    <section class="contact" id="contact">
+      <div class="title">Contact</div>
+      <div class="contact__container">
+        <form>
+          <div class="form__grid">
+            <div class="input__control">
+              <input type="text" required />
+              <label>Name</label>
+            </div>
+            <div class="input__control">
+              <input type="text" required />
+              <label>Email</label>
+            </div>
+          </div>
+          <div class="input__control__text">
+            <textarea required></textarea>
+            <label>Message</label>
+          </div>
+          <div class="btn__group">
+            <button>Submit</button>
+          </div>
+        </form>
+      </div>
+    </section>
+    <!-- ******* contact section ends ******** -->
 
     <!-- typed text -->
     <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
