--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
       href="https://unpkg.com/boxicons@latest/css/boxicons.min.css"
     />
 
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
+
     <title>Portfolio</title>
   </head>
   <body>
@@ -49,7 +51,7 @@
 
     <!-- ******* home section starts ******** -->
     <section class="home" id="home">
-      <div class="content__box">
+      <div class="content__box" data-aos="fade-right" data-aos-delay="100">
         <h3>Hi</h3>
         <h1>I'm <span>Shainy Achary</span></h1>
         <h2><span id="typed"></span></h2>
@@ -68,7 +70,7 @@
         </div>
         <button class="btn" id="downloadBtn">Download CV</button>
       </div>
-      <div class="img__box">
+      <div class="img__box" data-aos="fade-left" data-aos-delay="100">
         <img src="assets/shainy1.png" alt="profile image" />
       </div>
     </section>
@@ -78,7 +80,7 @@
     <section class="services" id="services">
       <div class="title">services</div>
       <div class="services__contain">
-        <div class="service__box">
+        <div class="service__box" data-aos="fade-right" data-aos-delay="200">
           <i class="ri-code-s-slash-line"></i>
           <div class="service__title">Web Development</div>
           <div class="service__para">
@@ -87,7 +89,7 @@
             totam quos!
           </div>
         </div>
-        <div class="service__box">
+        <div class="service__box" data-aos="fade-right" data-aos-delay="400">
           <i class="ri-palette-line"></i>
           <div class="service__title">UI/UX Design</div>
           <div class="service__para">
@@ -96,7 +98,7 @@
             totam quos!
           </div>
         </div>
-        <div class="service__box">
+        <div class="service__box" data-aos="fade-right" data-aos-delay="600">
           <i class="ri-mini-program-line"></i>
           <div class="service__title">Full Stack Development</div>
           <div class="service__para">
@@ -113,43 +115,43 @@
     <section class="skills" id="skills">
       <div class="title">Skills</div>
       <div class="skills__contain">
-        <div class="box">
+        <div class="box" data-aos="fade-down" data-aos-delay="200">
           <i class="bx bxl-html5"></i>
           <div class="skill__title">HTML5</div>
         </div>
-        <div class="box">
+        <div class="box" data-aos="fade-down" data-aos-delay="300">
           <i class="bx bxl-css3"></i>
           <div class="skill__title">CSS3</div>
         </div>
-        <div class="box">
+        <div class="box" data-aos="fade-down" data-aos-delay="400">
           <i class="bx bxl-bootstrap"></i>
           <div class="skill__title">Bootstrap</div>
         </div>
-        <div class="box">
+        <div class="box" data-aos="fade-down" data-aos-delay="500">
           <i class="bx bxl-javascript"></i>
           <div class="skill__title">Javascript</div>
         </div>
-        <div class="box">
+        <div class="box" data-aos="fade-down" data-aos-delay="600">
           <i class="bx bxl-react"></i>
           <div class="skill__title">ReactJs</div>
         </div>
-        <div class="box">
+        <div class="box" data-aos="fade-down" data-aos-delay="700">
           <i class="bx bxl-nodejs"></i>
           <div class="skill__title">NodeJs</div>
         </div>
-        <div class="box">
+        <div class="box" data-aos="fade-down" data-aos-delay="800">
           <i class="bx bxl-mongodb"></i>
           <div class="skill__title">mongodb</div>
         </div>
-        <div class="box">
+        <div class="box" data-aos="fade-down" data-aos-delay="900">
           <i class="bx bxl-postgresql"></i>
           <div class="skill__title">postgresql</div>
         </div>
-        <div class="box">
+        <div class="box" data-aos="fade-down" data-aos-delay="1000">
           <i class="fa-solid fa-database"></i>
           <div class="skill__title">SQL</div>
         </div>
-        <div class="box">
+        <div class="box" data-aos="fade-down" data-aos-delay="1100">
           <i class="fa-solid fa-network-wired"></i>
           <div class="skill__title">API</div>
         </div>
@@ -161,10 +163,10 @@
     <section class="about" id="about">
       <div class="title">About Me</div>
       <div class="about__contain">
-        <div class="img__box">
+        <div class="img__box" data-aos="flip-left" data-aos-delay="200">
           <img src="assets/shainy1.png" alt="profile" />
         </div>
-        <div class="about__content">
+        <div class="about__content" data-aos="zoom-in" data-aos-delay="500">
           <div class="about__title">front end Developer</div>
           <p class="about__desc">
             I am a dedicated and creative Front-End Developer with a knack for
@@ -184,35 +186,55 @@
       <div class="title">qualification</div>
       <div class="qualification__contain">
         <div class="line"></div>
-        <div class="qualification__card box_right">
+        <div
+          class="qualification__card box_right"
+          data-aos="fade-left"
+          data-aos-delay="200"
+        >
           <div class="dot"></div>
           <div class="qualification__content">
             <h4>Diploma in Full Stack Development</h4>
             <p><strong>2023</strong> : Suhradam IT Hub</p>
           </div>
         </div>
-        <div class="qualification__card box_left">
+        <div
+          class="qualification__card box_left"
+          data-aos="fade-right"
+          data-aos-delay="400"
+        >
           <div class="dot"></div>
           <div class="qualification__content">
             <h4>MBA in IT</h4>
             <p><strong>2014</strong> : Sikkim Manipal University</p>
           </div>
         </div>
-        <div class="qualification__card box_right">
+        <div
+          class="qualification__card box_right"
+          data-aos="fade-left"
+          data-aos-delay="600"
+        >
           <div class="dot"></div>
           <div class="qualification__content">
             <h4>B.Sc.</h4>
             <p><strong>2010</strong> : University of Mumbai</p>
           </div>
         </div>
-        <div class="qualification__card box_left">
+        <div
+          class="qualification__card box_left"
+          data-aos="fade-right"
+          data-aos-delay="800"
+        >
           <div class="dot"></div>
           <div class="qualification__content">
             <h4>HSC</h4>
             <p><strong>2007</strong> : Maharashtra State Board</p>
           </div>
         </div>
-        <div class="qualification__card box_right">
+        <div
+          class="qualification__card box_right"
+          data-aos="fade-left"
+          data-aos-delay="1000"
+        >
           <div class="dot"></div>
           <div class="qualification__content">
             <h4>SSC</h4>
@@ -227,7 +249,7 @@
     <section class="projects" id="projects">
       <div class="title">Projects</div>
       <div class="project__image">
-        <div class="project__card">
+        <div class="project__card" data-aos="zoom-in-up" data-aos-delay="200">
           <img src="assets/project1.jpg" alt="project1" />
           <div class="project__card__content">
             <a
@@ -239,7 +261,7 @@
             </a>
           </div>
         </div>
-        <div class="project__card">
+        <div class="project__card" data-aos="zoom-up-out" data-aos-delay="400">
           <img src="assets/project2.jpg" alt="project1" />
           <div class="project__card__content">
             <a href="https://www.soahanserenity.in/" target="_blank">
@@ -248,7 +270,7 @@
             </a>
           </div>
         </div>
-        <div class="project__card">
+        <div class="project__card" data-aos="zoom-in-down" data-aos-delay="200">
           <img src="assets/project3.jpg" alt="project1" />
           <div class="project__card__content">
             <a href="https://raymondrealtyaddressbygs.com/" target="_blank">
@@ -288,9 +310,13 @@
     </section>
     <!-- ******* contact section ends ******** -->
 
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <!-- typed text -->
     <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
 
     <script src="js/app.js"></script>
+    <script>
+      AOS.init();
+    </script>
   </body>
 </html>
